Properly scale resize corner on high DPI displays.

The resize corner was only getting properly scaled when a scrollbar was
present, since Scrollbar::ScrollbarThickness() uses
ChromeClient::WindowToViewportScalar() to scale its thickness[1],
whereas ScrollbarTheme::ScrollbarThickness() does not[2]. This patch
properly scales the resize corner in the case where there is no
scrollbar present.

[1]
https://cs.chromium.org/chromium/src/third_party/blink/renderer/core/scroll/scrollbar.h?l=111&rcl=c8ad070ccc44b7c13b24112aa60133195e4f7594 [formerly acee82f7b5654353a98f7b739c25d428642e8f82]
[2]
https://cs.chromium.org/chromium/src/third_party/blink/renderer/core/scroll/scrollbar_theme.h?l=61&rcl=2e3d5af5e16f24d02320c67124de0fb56004f35a [formerly b722ee8240e66004b021a1421d548bf10367b311]

Bug: 884575
Change-Id: I3a7e0b4134928ea40be625fa1f64c05ed9490620
Reviewed-on: https://chromium-review.googlesource.com/c/1474293
Commit-Queue: Nick Burris <nburris@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#632713}
Former-commit-id: 74335eede0294d41e0466cb2f46c67a391152cf4